[workspace]
resolver = "2"

members = [
	"printhor",
	"printhor-hwa-common",
	"printhor-hwa-common-macros",
	"printhor-hwa-utils",
]

exclude = [
	"libs/embassy", "libs/async-gcode",
	"hwi-boards/printhor-hwi_native",
	"hwi-boards/printhor-hwi_mks_robin_nano",
	"hwi-boards/printhor-hwi_nucleo_64_arduino_cnc_hat",
	"hwi-boards/printhor-hwi_rp_2040",
	"hwi-boards/printhor-hwi_skr_mini_e3"
]

[workspace.package]
license = "MIT"
license-file = "LICENSE"

[workspace.lints.clippy]
[workspace.lints.rust]
[workspace.lints.rustdoc]

[patch.crates-io]

printhor-hwa-common = { path = "printhor-hwa-common" }
printhor-hwa-utils = { path = "printhor-hwa-utils" }
printhor-hwi_native = { path = "hwi-boards/printhor-hwi_native" }
printhor-hwi_skr_mini_e3 = { path = "hwi-boards/printhor-hwi_skr_mini_e3" }
printhor-hwi_mks_robin_nano = { path = "hwi-boards/printhor-hwi_mks_robin_nano" }
printhor-hwi_nucleo_64_arduino_cnc_hat = { path = "hwi-boards/printhor-hwi_nucleo_64_arduino_cnc_hat" }
printhor-hwi_rp_2040 = {path = "hwi-boards/printhor-hwi_rp_2040"}

async-gcode = { path = "libs/async-gcode" }

embassy-stm32 = { path = "libs/embassy/embassy-stm32" }
embassy-rp = { path = "libs/embassy/embassy-rp" }
embassy-executor = { path = "libs/embassy/embassy-executor" }
embassy-sync = { path = "libs/embassy/embassy-sync" }
embassy-time = { path = "libs/embassy/embassy-time" }
embassy-futures = { path = "libs/embassy/embassy-futures" }
embassy-embedded-hal = { path = "libs/embassy/embassy-embedded-hal" }
embassy-usb = { path = "libs/embassy/embassy-usb" }

[profile.dev]
codegen-units = 1
debug = 2
strip = false
incremental = false
debug-assertions = true
overflow-checks = true
opt-level = "s" # disable to play with GDB
lto = false
panic = "unwind"

[profile.release]
codegen-units = 1
debug = 2
strip = false
incremental = false
debug-assertions = true
overflow-checks = true
opt-level = "z"
lto = "fat"
panic = "unwind"

[profile.release-opt]
inherits = "release"
codegen-units = 1
debug = 0
incremental = false
debug-assertions = false
overflow-checks = false
strip = false
opt-level = "z"
lto = "fat"
panic = "abort"