[package]
authors = ["Carlos Barrales Ruiz <cbruiz@gmail.com>"]
edition = "2021"
name = "prinThor"
version = "0.0.1"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/cbruiz/printhor"
documentation = "https://crates.io/crates/prinThor"
description = "The highly reliable but not necessarily functional 3D Printer firmware"

[badges.maintenance]
status = "experimental"

[features]

[dependencies]
printhor-hwa-common = "0.0.1"
printhor-hwi_native = "0.0.1"

[build-dependencies]

[profile.dev]
codegen-units = 1
debug = 2
strip = false
debug-assertions = true
opt-level = "z"
lto = true
panic = "abort"

[profile.release]
codegen-units = 1
debug = 2
strip = false
debug-assertions = false
opt-level = "z"
lto = true
panic = "unwind"

[profile.release-opt]
inherits = "release"
codegen-units = 1
debug = 0
debug-assertions = false
overflow-checks = false
strip = false
opt-level = "z"
lto = true
panic = "abort"

